--- a/style.css
+++ b/style.css
@@ -1,6 +1,33 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 h1 {
-    color: blue;
-    background-color: aqua;
+    color: blueviolet;
     font-size: 96px;
     font-weight: 900;
+    font-style: oblique;
+    text-decoration: underline;
+    text-transform: capitalize;
+    text-align: center;
+}
+
+h2 {}
+
+p {
+    font-size: 18px;
+    text-align: justify;
+    text-indent: 90px;
+}
+
+.bg {
+    height: 100vh;
+    width: 100vw;
+    background-color: #555;
+    background-image: url("https://images.unsplash.com/photo-1528837516156-0a7225a43641?q=80&w=1933&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
 }
