--- a/style.css
+++ b/style.css
@@ -3,22 +3,48 @@
     padding: 0;
 }
 
+:root{
+    font-size: 62.5%;
+}
+
+body{
+    font-family: 'Times New Roman', Times, serif, Helvetica, sans-serif;
+}
+
 h1 {
     color: blueviolet;
-    font-size: 96px;
+    font-size: 9.6rem;
     font-weight: 900;
     font-style: oblique;
-    text-decoration: underline;
     text-transform: capitalize;
     text-align: center;
 }
 
-h2 {}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: 'Roboto', sans-serif;
+}
+
+h2 {
+    font: 3.2rem;
+}
+
+.novo-em{
+    font-size: 3.2rem;
+}
+
+.novo-em{
+    font-size: 300%;
+}
 
 p {
-    font-size: 18px;
+    font-size: 1.8rem;
     text-align: justify;
-    text-indent: 90px;
+    text-indent: 9rem;
 }
 
 .bg {
