--- a/style.css
+++ b/style.css
@@ -145,7 +145,9 @@ nav.menu {
     clear: both;
 }
 
-.boxes p {}
+.boxes p {
+    text-align: justify;
+}
 
 img {
     /* display: inline; | Padrão */
