--- a/style.css
+++ b/style.css
@@ -14,9 +14,9 @@ body {
     font-size: 1.8rem;
 }
 
-main{
+/* main{
     padding-top: 7rem;
-}
+} */
 
 table,
 td,
@@ -35,9 +35,11 @@ table tr:nth-child(2n + 3) {
 
 table {
     font-size: 2.4rem;
-    /* border-collapse: separate; | padrão */
-    border-collapse: collapse;
+    border-collapse: separate;
+    /*| padrão */
+    /* border-collapse: collapse; */
     border: .2rem solid black;
+    margin-left: 5rem;
 }
 
 h1 {
@@ -47,14 +49,23 @@ h1 {
     font-style: oblique;
     text-transform: capitalize;
     text-align: center;
+    /* display: none; Remove o elemento */
+    /* visibility: hidden; Esconde o elemento, mantém as dimensões */
+    /* opacity: .1; Autoexplicativo */
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-family: 'Roboto', sans-serif;
 }
 
 h2 {
     font: 3.2rem;
+    margin: 2rem;
 }
 
 p {
@@ -66,6 +77,7 @@ p {
 a {
     font-size: 2.4rem;
     color: #000033;
+    width: 11rem;
 }
 
 a:visited {
@@ -77,7 +89,7 @@ a:hover {
 }
 
 .bg {
-    height: 100vh;
+    height: 40vh;
     width: 100vw;
     background-color: #555;
     background-image: url("https://images.unsplash.com/photo-1528837516156-0a7225a43641?q=80&w=1933&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
@@ -109,7 +121,7 @@ nav.menu {
     z-index: 1;
 }
 
-.contact-list h2{
+.contact-list h2 {
     top: 7rem;
     position: sticky;
     background-color: #0d80bf;
@@ -121,7 +133,7 @@ nav.menu {
     flex-wrap: wrap;
 }
 
-.box + span {
+.box+span {
     display: none;
 }
 
@@ -141,7 +153,7 @@ nav.menu {
     /* Padrão */
 }
 
-.box + span {
+.box+span {
     clear: both;
 }
 
@@ -153,4 +165,130 @@ nav.menu {
 img {
     /* display: inline; | Padrão */
     height: 10rem;
+}
+
+/*Atributo custom*/
+[data-button="botao"] {
+    background: steelblue;
+    color: #fff;
+    border: none;
+    font-size: 2.8rem;
+    padding: 0.6rem 2.4rem;
+    cursor: pointer;
+    margin-left: 2rem;
+    opacity: .5;
+    /* transform: scale(.8) rotate(45deg) translate(5rem); */
+    display: block;
+}
+
+[data-button="botao"]:hover {
+    opacity: 1;
+    transform: scale(1.2) rotate(45deg) translate(5rem);
+    transition: all 1s ease-in-out, background-color 2s ease-in-out;
+    background-color: #f8c300;
+    color: #000;
+}
+
+[data-anchor="team"] {
+    margin-top: 3rem;
+    background: steelblue;
+    color: #fff;
+    border: none;
+    font-size: 2.8rem;
+    padding: 0.6rem 2.4rem;
+    cursor: pointer;
+    margin-left: 2rem;
+    text-decoration: none;
+    font-family: 'Roboto', sans-serif;
+    opacity: .5;
+    /* transform: scale(.8) rotate(45deg) translate(5rem); */
+    display: block;
+}
+
+[data-anchor="team"]:hover {
+    opacity: 1;
+    transform: scale(.5) rotate(-45deg) translateX(5rem);
+    transition: all 1s ease-in-out, background-color 2s ease-in-out;
+    background-color: #00f8a1;
+    color: #000;
+}
+
+[data-button="more"] {
+    margin-top: 3rem;
+    background: steelblue;
+    color: #fff;
+    border: none;
+    font-size: 2.8rem;
+    padding: 0.6rem 2.4rem;
+    cursor: pointer;
+    margin-left: 2rem;
+    opacity: .5;
+    display: block;
+    animation: pulse 1s infinite;
+    animation-fill-mode: forwards;
+    animation-direction: alternate;
+    transform: scale(1);
+}
+
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+        opacity: 1;
+    }
+
+    /* 50% {
+        transform: scale(1.2);
+        opacity: .5;
+    } */
+    100% {
+        transform: scale(1.2);
+        opacity: .5;
+    }
+
+    /* 100% {
+        transform: scale(1);
+        opacity: 1;
+    } */
+}
+
+[data-company="GCO"] {
+    background-color: #fff;
+}
+
+[data-company] {
+    background-color: #764242;
+}
+
+.breaker {
+    background-color: blue;
+    height: .1rem;
+    width: 0.1rem;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+}
+
+@media screen and (min-width: 300px) and (max-width: 566px) {
+    .bg {
+        height: 60vh;
+    }
+
+    h1 {
+        color: blue;
+    }
+}
+
+@media screen and (min-width: 567px) and (max-width: 999px) {
+    .bg {
+        height: 80vh;
+    }
+
+    h1 {
+        color: red;
+    }
+}
+
+@media print {
+    .bg {
+        display: none;
+    }
 }
